@@ -1,8 +1,8 @@
 Package: missMethyl
 Type: Package
 Title: Analysis of methylation array data
-Version: 0.99.8
-Date: 2014-06-30
+Version: 0.99.9
+Date: 2014-09-25
 Author: Belinda Phipson and Jovana Maksimovic
 Maintainer: Belinda Phipson <belinda.phipson@mcri.edu.au>, Jovana
         Maksimovic <jovana.maksimovic@mcri.edu.au>
