@@ -3,24 +3,24 @@ citHeader("Please cite the first paper for SWAN normalisation and the second pap
 citEntry(
   entry="article",	
   title="SWAN: Subset-quantile within array normalization for illumina infinium HumanMethylation450 BeadChips",
-  author="Maksimovic, Jovana and Gordon, Lavinia and Oshlack, Alicia",
+  author="Jovana Maksimovic and Lavinia Gordon and Alicia Oshlack",
   journal="Genome Biology",
   volume=13,
   number=6,
   pages="R44",
   year=2012,
-  textVersion="Maksimovic J, Gordon L and Oshlack A (2012). SWAN: Subset-quantile within array normalization for illumina infinium HumanMethylation450 BeadChips. Genome Biology 13(6), R44"
+  textVersion="J. Maksimovic and L. Gordon and A. Oshlack A (2012). SWAN: Subset-quantile within array normalization for illumina infinium HumanMethylation450 BeadChips. Genome Biology 13(6), R44"
 )
 
 citEntry(
   entry="article",	
   title="DiffVar: A new method for detecting differential variability with applicatino to methylation in cancer and aging",
-  author="Phipson, Belinda and Oshlack, Alicia",
+  author=" Belinda Phipson and Alicia Oshlack",
   journal="Genome Biology",
-  volume="",
-  number="",
-  pages="",
+  volume=15,
+  number=465,
+  pages="doi:10.1186/PREACCEPT-1259098574122074",
   year=2014,
-  textVersion="Phipson B and Oshlack A. DiffVar: A new method for detecting differential variability with applicatino to methylation in cancer and aging. Submitted 2014."
+  textVersion="B. Phipson and A. Oshlack. DiffVar: A new method for detecting differential variability with application to methylation in cancer and aging. Submitted 2014."
 )
 
